[package]
name = "phantom-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "phantom_rs"
path = "src/lib.rs"

[[bin]]
name = "phantom-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
env_logger = "0.11"
log = "0.4"
rand = "0.10.1"
socket2 = "0.6.3"
